extension.popup: version 0.6.16; fix explorer page name break on `?`

--- a/extension/popup.less
+++ b/extension/popup.less
@@ -198,6 +198,7 @@ main > div {
           font-size: .7em;
           font-style: italic;
           color: #555;
+          white-space: nowrap;
         }
         > .file-count {
           margin: 0 .4em;
